--- a/wp-content/themes/foundation-network-portal/sass/plugins/_events.scss
+++ b/wp-content/themes/foundation-network-portal/sass/plugins/_events.scss
@@ -4,7 +4,7 @@
 
 /*************  Single Event Page ********************/
 
-h1.single-title {
+.single-event .single-title {
 	font-size: 44px;
 	width: 50%;
 	float: right;
